--- a/templates/upload.html
+++ b/templates/upload.html
@@ -293,9 +293,10 @@
     <i class="ri-arrow-up-fill scrollup__icon"></i>
 </a>
 
-<script src="scrollreveal.min.js"></script>
-<script src="main.js"></script>
-
+<script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+        ScrollReveal().reveal('.steps__card', { interval: 200 });
+    </script>
 <script>
     const dropArea = document.querySelector(".drag-area");
     const dragText = dropArea.querySelector("header");
