--- a/static/style.css
+++ b/static/style.css
@@ -1186,16 +1186,22 @@ body.dark-theme {
     background-color: rgb(15, 180, 6);
     color: rgb(84, 81, 81);
 }
-.aiButtons{
-    margin: 20px;
-    text-align:end;
-}
-
 .preview {
     display: none;
-    margin-top: 10px;
+    margin-top: 20px;
+    text-align: center;
 }
+
 .preview img {
     max-width: 100%;
+    max-height: 400px; /* Fotoğrafın maksimum yüksekliğini belirleyin */
     height: auto;
+    width: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.aiButtons {
+    display: none; /* Başlangıçta butonları gizle */
 }
