--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="{{url_for('static', filename='login_style.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
   <title>AI Potato | Register</title>
+  <style>
+    option {
+    color: black;
+}
+  </style>
   <script>
     const countries = {
       "Türkiye": {
@@ -58,7 +63,7 @@
       <div class="login-header">
         <span>Register</span>
       </div>
-      <form action="{{url_for('login_post')}}" method="post">
+      <form action="{{url_for('register_post')}}" method="post">
         <div class="input_box">
           <input type="text" name="username" id="user" class="input-field" required>
           <label for="user" class="label">Username</label>
@@ -99,7 +104,7 @@
         </div>
 
         <div class="input_box">
-          <input type="submit" name="submit" class="input-submit" value="Login">
+          <input type="submit" name="submit" class="input-submit" value="Register">
         </div>
       </form>
       <div class="register">
