--- a/static/style.css
+++ b/static/style.css
@@ -1207,7 +1207,10 @@ body.dark-theme {
     justify-content: space-around;
     margin-top: 10px;
 }
-.username
-{
-    margin-left:20%;
+.username {
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--first-color);
+    margin-bottom: var(--mb-2);
 }
