past analysis user id ile çekiliyor
eksikler:
fotoğraflar veritabanına aktarılırken aynı isimde yüklendiği için fotoğraf hatası veriyor

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -264,7 +264,7 @@
 
         <section class="product section container" id="pastAnalysis">
             <h2 class="section__title-center">Your Past Analysis</h2>
-            <p class="product__description">You can find his previous analyzes here.</p>
+            <p class="product__description">You can find your previous analyzes here.</p>
             <div class="product__container grid">
                 {% for item in data %}
                 <article class="product__card">
