--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +11,11 @@
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <link rel="icon" href="assets/img/icon.png" type="image/png">
 
-    
-    
+
+
     <title>AI Potato</title>
 </head>
+
 <body>
     <header class="header" id="header">
         <nav class="nav container">
@@ -38,13 +40,13 @@
                         <a href="#contact" class="nav__link">Contact Us</a>
                     </li>
                     {% if session.loggedin %}
-                        <li class="nav__item">
-                            <a href="/logout" class="nav__link">Logout</a>
-                        </li>
+                    <li class="nav__item">
+                        <a href="/logout" class="nav__link">Logout</a>
+                    </li>
                     {% else %}
-                        <li class="nav__item">
-                            <a href="/login" class="nav__link"><i class="fa-regular fa-user"></i></a>
-                        </li>
+                    <li class="nav__item">
+                        <a href="/login" class="nav__link"><i class="fa-regular fa-user"></i></a>
+                    </li>
                     {% endif %}
                 </ul>
                 <div class="nav__close" id="nav-close">
@@ -63,13 +65,15 @@
     <main class="main">
         <section class="home" id="home">
             {% if username %}
-    <h3 class="username">Hello {{ username }}</h3>
-{% endif %}
+            <h3 class="username">Hello {{ username }}</h3>
+            {% endif %}
+
             <div class="home__container container grid">
                 <img src="{{ url_for('static', filename='assets/img/home.png') }}" alt="" class="home__img">
                 <div class="home__data">
                     <h1 class="home__title">Healthy Plant<br>Healthy Life</h1>
-                    <p class="home__description">Do you want to test whether the potato plant you grow has diseases?</p>
+                    <p class="home__description">Do you want to test whether the potato plant you grow has diseases?
+                    </p>
                     <a href="#steps" class="button button--flex">Let's Try <i
                             class="ri-arrow-right-down-line button__icon"></i></a>
                 </div>
@@ -123,7 +127,7 @@
 
         <section class="steps section container" id="steps">
             <div class="steps__bg">
-            
+
                 <div class="drag-area" id="drag-area" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
                     <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
                     <header>Drag and Drop File or Click to Select</header>
@@ -133,14 +137,14 @@
                     <img id="previewImage" src="" alt="Preview">
                 </div>
                 <div class="row aiButtons" id="aiButtons">
-                
+
                     <label class="locationCheckbox" style="margin-top: 12px;" for="locationCheckbox">Save Location
                         <input type="checkbox" id="locationCheckbox" name="locationCheckbox">
                     </label>
                     <button class="clearButton " onclick="clearFile()">Clear</button>
                     <button class="analyzeButton" onclick="analyzeFile()">Analyze</button>
                 </div>
-            
+
                 <div class="steps__container grid">
                     <div class="steps__card">
                         <div class="steps__card-number">01</div>
@@ -150,16 +154,18 @@
                     <div class="steps__card">
                         <div class="steps__card-number">02</div>
                         <h3 class="steps__card-title">Place an order</h3>
-                        <p class="steps__card-description">Once your order is set, we move to the next step which is the shipping.</p>
+                        <p class="steps__card-description">Once your order is set, we move to the next step which is the
+                            shipping.</p>
                     </div>
                     <div class="steps__card">
                         <div class="steps__card-number">03</div>
                         <h3 class="steps__card-title">Get plants delivered</h3>
-                        <p class="steps__card-description">Our delivery process is easy, you receive the plant direct to your door.</p>
+                        <p class="steps__card-description">Our delivery process is easy, you receive the plant direct to
+                            your door.</p>
                     </div>
                 </div>
             </div>
-            
+
         </section>
 
         <section class="product section container" id="products">
@@ -264,22 +270,29 @@
 
         <section class="product section container" id="pastAnalysis">
             <h2 class="section__title-center">Your Past Analysis</h2>
-            <p class="product__description">You can find your previous analyzes here.</p>
-            <div class="product__container grid">
-                {% for item in data %}
-                <article class="product__card">
-                    <div class="product__circle"></div>
-                    <img src="{{ item[1] }}" alt="Analysis Image" class="product__img">
-                    <h3 class="product__title">Illness: {{ item[2] }}</h3>
-                    <span class="product__price">Occur : {{ item[3] }}%</span>
-                    <button class="button--flex product__button"><i class="fa fa-stethoscope"></i></button>
-                </article>
-                {% endfor %}
-            </div>
+            {% if session.loggedin %}
+                <p class="product__description">You can find your previous analyzes here.</p>
+                <div class="product__container grid">
+                    {% for item in data %}
+                    <article class="product__card">
+                        <div class="product__circle"></div>
+                        <img src="{{ item[1] }}" alt="Analysis Image" class="product__img">
+                        <h3 class="product__title">Illness: {{ item[2] }}</h3>
+                        <span class="product__price">Occur : {{ item[3] }}%</span>
+                        <button class="button--flex product__button"><i class="fa fa-stethoscope"></i></button>
+                    </article>
+                    {% endfor %}
+                </div>
+            {% else %}
+                <p class="product__description">Please log in to see your past analysis.</p>
+                <br>
+                <center><a href="/login" class="button button--flex">Log In <i class="fa-regular fa-user"></i></a></center>
+                
+            {% endif %}
         </section>
         
-        
-        
+
+
 
         <section class="contact section container" id="contact">
             <div class="contact__container grid">
@@ -326,145 +339,146 @@
         </section>
     </main>
 
-</footer>
+    </footer>
 
-<a href="#" class="scrollup" id="scroll-up">
-    <i class="ri-arrow-up-fill scrollup__icon"></i>
-</a>
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-fill scrollup__icon"></i>
+    </a>
 
-<script src="{{url_for('static', filename='scrollreveal.min.js')}}"></script>
-<script src="{{url_for('static', filename='main.js')}}"></script>
+    <script src="{{url_for('static', filename='scrollreveal.min.js')}}"></script>
+    <script src="{{url_for('static', filename='main.js')}}"></script>
 
-<script>
-document.addEventListener('dragover', dragOverHandler);
-document.addEventListener('drop', dropHandler);
+    <script>
+        document.addEventListener('dragover', dragOverHandler);
+        document.addEventListener('drop', dropHandler);
 
-const dropArea = document.querySelector(".drag-area");
-const dragText = dropArea.querySelector("header");
-const input = dropArea.querySelector("input[type='file']");
-const aiButtons = document.getElementById("aiButtons");
-const locationCheckbox = document.getElementById("locationCheckbox");
-let uploadedFile;
-let userLatitude = null;
-let userLongitude = null;
+        const dropArea = document.querySelector(".drag-area");
+        const dragText = dropArea.querySelector("header");
+        const input = dropArea.querySelector("input[type='file']");
+        const aiButtons = document.getElementById("aiButtons");
+        const locationCheckbox = document.getElementById("locationCheckbox");
+        let uploadedFile;
+        let userLatitude = null;
+        let userLongitude = null;
 
-function dragOverHandler(event) {
-    event.preventDefault();
-    dropArea.classList.add("active");
-    dragText.textContent = "Release to Upload File";
-}
+        function dragOverHandler(event) {
+            event.preventDefault();
+            dropArea.classList.add("active");
+            dragText.textContent = "Release to Upload File";
+        }
 
-function dropHandler(event) {
-    event.preventDefault();
-    dropArea.classList.remove("active");
-    dragText.textContent = "Drag and Drop File";
+        function dropHandler(event) {
+            event.preventDefault();
+            dropArea.classList.remove("active");
+            dragText.textContent = "Drag and Drop File";
 
-    uploadedFile = event.dataTransfer.files[0];
-    showFile(uploadedFile);
-    dropArea.style.display = 'none'; // Drag alanını gizle
-}
+            uploadedFile = event.dataTransfer.files[0];
+            showFile(uploadedFile);
+            dropArea.style.display = 'none'; // Drag alanını gizle
+        }
 
-input.addEventListener("change", function (event) {
-    uploadedFile = event.target.files[0];
-    showFile(uploadedFile);
-    dropArea.style.display = 'none'; // Drag alanını gizle
-});
+        input.addEventListener("change", function (event) {
+            uploadedFile = event.target.files[0];
+            showFile(uploadedFile);
+            dropArea.style.display = 'none'; // Drag alanını gizle
+        });
 
-function showFile(file) {
-    const reader = new FileReader();
-    reader.onload = function(event) {
-        document.getElementById('previewImage').src = event.target.result;
-        document.getElementById('preview').style.display = 'block';
-        aiButtons.style.display = 'flex'; // Dosya yüklendiğinde butonları göster
-    };
-    reader.readAsDataURL(file);
-}
+        function showFile(file) {
+            const reader = new FileReader();
+            reader.onload = function (event) {
+                document.getElementById('previewImage').src = event.target.result;
+                document.getElementById('preview').style.display = 'block';
+                aiButtons.style.display = 'flex'; // Dosya yüklendiğinde butonları göster
+            };
+            reader.readAsDataURL(file);
+        }
 
-function clearFile() {
-    uploadedFile = null;
-    document.getElementById('file').value = '';
-    document.getElementById('preview').style.display = 'none';
-    aiButtons.style.display = 'none'; // Temizle butonuna basıldığında butonları gizle
-    dropArea.style.display = 'flex'; // Drag alanını tekrar görünür yap
-}
+        function clearFile() {
+            uploadedFile = null;
+            document.getElementById('file').value = '';
+            document.getElementById('preview').style.display = 'none';
+            aiButtons.style.display = 'none'; // Temizle butonuna basıldığında butonları gizle
+            dropArea.style.display = 'flex'; // Drag alanını tekrar görünür yap
+        }
 
-function analyzeFile() {
-    // Önceki analiz sonuçlarını temizle
-    const existingResults = document.querySelectorAll('#preview p');
-    existingResults.forEach(result => result.remove());
+        function analyzeFile() {
+            // Önceki analiz sonuçlarını temizle
+            const existingResults = document.querySelectorAll('#preview p');
+            existingResults.forEach(result => result.remove());
 
-    if (uploadedFile) {
-        const formData = new FormData();
-        formData.append('file', uploadedFile);
+            if (uploadedFile) {
+                const formData = new FormData();
+                formData.append('file', uploadedFile);
 
-        if (locationCheckbox.checked) {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(
-                    position => {
-                        userLatitude = position.coords.latitude;
-                        userLongitude = position.coords.longitude;
+                if (locationCheckbox.checked) {
+                    if (navigator.geolocation) {
+                        navigator.geolocation.getCurrentPosition(
+                            position => {
+                                userLatitude = position.coords.latitude;
+                                userLongitude = position.coords.longitude;
 
-                        // Konum bilgilerini formData'ya ekle
-                        formData.append('latitude', userLatitude);
-                        formData.append('longitude', userLongitude);
+                                // Konum bilgilerini formData'ya ekle
+                                formData.append('latitude', userLatitude);
+                                formData.append('longitude', userLongitude);
 
-                        // Dosya ve konum bilgilerini sunucuya gönder
-                        sendFile(formData);
-                    },
-                    error => {
-                        alert('Konum alınamadı: ' + error.message);
+                                // Dosya ve konum bilgilerini sunucuya gönder
+                                sendFile(formData);
+                            },
+                            error => {
+                                alert('Konum alınamadı: ' + error.message);
+                            }
+                        );
+                    } else {
+                        alert('Tarayıcınız konum servislerini desteklemiyor.');
                     }
-                );
+                } else {
+                    // Konum bilgisi olmadan dosyayı gönder
+                    sendFile(formData);
+                }
             } else {
-                alert('Tarayıcınız konum servislerini desteklemiyor.');
+                alert('Lütfen bir dosya yükleyin.');
             }
-        } else {
-            // Konum bilgisi olmadan dosyayı gönder
-            sendFile(formData);
         }
-    } else {
-        alert('Lütfen bir dosya yükleyin.');
-    }
-}
 
-function sendFile(formData) {
-    fetch('/upload', {
-        method: 'POST',
-        body: formData
-    })
-    .then(response => response.json())
-    .then(data => {
-        if (data.error) {
-            alert(data.error);
-        } else {
-            const resultElement = document.createElement('p');
-            resultElement.textContent = `Predicted: ${data.predicted_class_name}, Confidence: ${data.confidence}`;
-            if (data.latitude && data.longitude) {
-                resultElement.textContent += `, Location: (${data.latitude}, ${data.longitude})`;
-            }
-            document.getElementById('preview').appendChild(resultElement);
-            resultElement.style.color = 'white';
+        function sendFile(formData) {
+            fetch('/upload', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        alert(data.error);
+                    } else {
+                        const resultElement = document.createElement('p');
+                        resultElement.textContent = `Predicted: ${data.predicted_class_name}, Confidence: ${data.confidence}`;
+                        if (data.latitude && data.longitude) {
+                            resultElement.textContent += `, Location: (${data.latitude}, ${data.longitude})`;
+                        }
+                        document.getElementById('preview').appendChild(resultElement);
+                        resultElement.style.color = 'white';
+                    }
+                })
+                .catch(error => {
+                    console.error(error);
+                    alert('Dosya yüklenirken bir hata oluştu.');
+                });
         }
-    })
-    .catch(error => {
-        console.error(error);
-        alert('Dosya yüklenirken bir hata oluştu.');
-    });
-}
-</script>
-<script src="https://kit.fontawesome.com/978d53435b.js" crossorigin="anonymous"></script>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/667c7f84eaf3bd8d4d14b164/1i1b547i6';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+    </script>
+    <script src="https://kit.fontawesome.com/978d53435b.js" crossorigin="anonymous"></script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/667c7f84eaf3bd8d4d14b164/1i1b547i6';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
+
 </html>
