--- a/templates/upload.html
+++ b/templates/upload.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="row aiButtons" id="aiButtons">
 
-                    <label class="locationCheckbox" style="margin-top: 12px;" for="locationCheckbox">Save Location
+                    <label class="locationCheckbox" style="margin-top: 12px;color: white;" for="locationCheckbox">Save Location
                         <input type="checkbox" id="locationCheckbox" name="locationCheckbox">
                     </label>
                     <button class="clearButton " onclick="clearFile()">Clear</button>
@@ -185,7 +185,7 @@
                     <img src="{{ url_for('static', filename='assets/img/sample2.png') }}" alt="" class="product__img">
                     <h3 class="product__title">Illness: Healthy Potato</h3>
                     <span class="product__price">Occur : %99</span>
-                    <button class="button--flex product__button"><i class="bi bi-check-lg"></i></button>
+                    <button class="button--flex product__button"><i class="fa fa-stethoscope"></i></button>
                 </article>
                 <article class="product__card">
                     <div class="product__circle"></div>
@@ -270,7 +270,7 @@
 
         <section class="product section container" id="pastAnalysis">
             <h2 class="section__title-center">Your Past Analysis</h2>
-            {% if session.loggedin %}
+            {% if loggedin %}
                 <p class="product__description">You can find your previous analyzes here.</p>
                 <div class="product__container grid">
                     {% for item in data %}
@@ -279,17 +279,17 @@
                         <img src="{{ item[1] }}" alt="Analysis Image" class="product__img">
                         <h3 class="product__title">Illness: {{ item[2] }}</h3>
                         <span class="product__price">Occur : {{ item[3] }}%</span>
-                        <button class="button--flex product__button"><i class="fa fa-stethoscope"></i></button>
                     </article>
                     {% endfor %}
                 </div>
             {% else %}
                 <p class="product__description">Please log in to see your past analysis.</p>
-                <br>
-                <center><a href="/login" class="button button--flex">Log In <i class="fa-regular fa-user"></i></a></center>
-                
+                <a href="/login" class="button button--flex">Log In <i class="fa-regular fa-user"></i></a>
             {% endif %}
+            <button class="button button--flex" onclick="showNearbyDiseases()">Show Nearby Diseases</button>
+            <div id="nearbyDiseases" class="product__container grid"></div>
         </section>
+        
         
 
 
@@ -479,6 +479,57 @@
         })();
     </script>
     <!--End of Tawk.to Script-->
+    <script>
+        function showNearbyDiseases() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(
+                    position => {
+                        const latitude = position.coords.latitude;
+                        const longitude = position.coords.longitude;
+        
+                        const formData = new FormData();
+                        formData.append('latitude', latitude);
+                        formData.append('longitude', longitude);
+        
+                        fetch('/nearby_analyses', {
+                            method: 'POST',
+                            body: formData
+                        })
+                        .then(response => response.json())
+                        .then(data => {
+                            if (data.error) {
+                                alert(data.error);
+                            } else {
+                                const nearbyDiseasesDiv = document.getElementById('nearbyDiseases');
+                                nearbyDiseasesDiv.innerHTML = '';
+        
+                                if (data.nearby_diseases.length > 0) {
+                                    data.nearby_diseases.forEach(disease => {
+                                        const diseaseElement = document.createElement('p');
+                                        diseaseElement.textContent = `Nearby Disease: ${disease}`;
+                                        nearbyDiseasesDiv.appendChild(diseaseElement);
+                                    });
+                                } else {
+                                    nearbyDiseasesDiv.innerHTML = '<p>No nearby diseases found within 10 km.</p>';
+                                }
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error:', error);
+                            alert('Error fetching nearby diseases.');
+                        });
+                    },
+                    error => {
+                        alert('Error getting location: ' + error.message);
+                    }
+                );
+            } else {
+                alert('Geolocation is not supported by your browser.');
+            }
+        }
+        </script>
+        
+        
 </body>
 
 </html>
