--- a/static/style.css
+++ b/static/style.css
@@ -1214,3 +1214,35 @@ body.dark-theme {
     color: var(--first-color);
     margin-bottom: var(--mb-2);
 }
+
+.nearby-diseases-container {
+    margin-top: 20px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nearby-diseases-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    width: 80%;
+    max-width: 600px; /* Maksimum genişlik */
+}
+
+.nearby-diseases-list li {
+    background-color: #f0f0f0;
+    border: 1px solid #ddd;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    max-width: 100%;
+}
+
+.nearby-diseases-list li:hover {
+    background-color: #e0e0e0;
+}
