--- a/templates/upload.html
+++ b/templates/upload.html
@@ -166,8 +166,8 @@
 
         </section>
         <center>
-            <button class="button button--flex" onclick="showNearbyDiseases()" >Show Nearby Diseases</button>
-            <div id="nearbyDiseases" style="text-align: center;" class="product__container grid"></div>
+            <button class="button button--flex" onclick="showNearbyDiseases()">Show Nearby Diseases</button>
+            <div id="nearbyDiseases" class="nearby-diseases-container"></div>
         </center>
         <section class="product section container" id="products">
             <h2 class="section__title-center">Sample Test <br> Results</h2>
@@ -276,10 +276,10 @@
                 <div class="product__container grid">
                     {% for item in data %}
                     <article class="product__card">
-                        
-                        <img src="{{ item[1] }}" alt="Analysis Image" class="product__img">
-                        <h3 class="product__title">Illness: {{ item[2] }}</h3>
-                        <span class="product__price">Occur : {{ item[3] }}%</span>
+                        <img src="{{ item[0] }}" alt="Analysis Image" class="product__img">
+                        <h3 class="product__title">Illness: {{ item[1] }}</h3>
+                        <span class="product__price">Occur : {{ item[2] }}%</span>
+                        <p class="product__date">Date: ({{ item[4] }})</p>
                     </article>
                     {% endfor %}
                 </div>
@@ -287,10 +287,10 @@
                 <p class="product__description">Please log in to see your past analysis.</p>
                 <center>
                 <a href="/login" style="margin: 20px;" class="button button--flex">Log In <i class="fa-regular fa-user"></i></a>
-            </center>
+                </center>
             {% endif %}
-            
         </section>
+        
         
         
 
@@ -506,11 +506,14 @@
                                 nearbyDiseasesDiv.innerHTML = '';
         
                                 if (data.nearby_diseases.length > 0) {
+                                    const list = document.createElement('ul');
+                                    list.classList.add('nearby-diseases-list');
                                     data.nearby_diseases.forEach(disease => {
-                                        const diseaseElement = document.createElement('p');
-                                        diseaseElement.textContent = `Nearby Disease: ${disease}`;
-                                        nearbyDiseasesDiv.appendChild(diseaseElement);
+                                        const listItem = document.createElement('li');
+                                        listItem.textContent = disease;
+                                        list.appendChild(listItem);
                                     });
+                                    nearbyDiseasesDiv.appendChild(list);
                                 } else {
                                     nearbyDiseasesDiv.innerHTML = '<p>No nearby diseases found within 10 km.</p>';
                                 }
