--- a/templates/upload.html
+++ b/templates/upload.html
@@ -179,21 +179,21 @@
                     <img src="{{ url_for('static', filename='assets/img/sample3.png') }}" alt="" class="product__img">
                     <h3 class="product__title">Illness: Early Blight</h3>
                     <span class="product__price">Occur : %99</span>
-                    <button class="button--flex product__button"><i class="fa fa-stethoscope"></i></button>
+                    <button class="button--flex product__button illness"><i class="fa fa-stethoscope"></i></button>
                 </article>
                 <article class="product__card">
                     <div class="product__circle"></div>
                     <img src="{{ url_for('static', filename='assets/img/sample2.png') }}" alt="" class="product__img">
                     <h3 class="product__title">Illness: Healthy Potato</h3>
                     <span class="product__price">Occur : %99</span>
-                    <button class="button--flex product__button"><i class="fa fa-stethoscope"></i></button>
+                    <button class="button--flex product__button healthy"><i class="fa-solid fa-heart-pulse"></i></button>
                 </article>
                 <article class="product__card">
                     <div class="product__circle"></div>
                     <img src="{{ url_for('static', filename='assets/img/sample1.png') }}" alt="" class="product__img">
                     <h3 class="product__title">Illness: Late Blight</h3>
                     <span class="product__price">Occur : %99</span>
-                    <button class="button--flex product__button"><i class="fa fa-stethoscope"></i></button>
+                    <button class="button--flex product__button illness"><i class="fa fa-stethoscope"></i></button>
                 </article>
             </div>
         </section>
